--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "jose": "^6.0.10",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mysql2": "^3.14.0",
     "next": "15.2.4",
     "react": "^19.0.0",
